Prevent horizontal scroll when form button is very long (gift cards)

--- a/web/css/layout/_blocks.less
+++ b/web/css/layout/_blocks.less
@@ -66,6 +66,7 @@
     .box-actions {
         clear: both;
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         gap: @2;
         margin-top: @2;
